--- a/styles.css
+++ b/styles.css
@@ -29,23 +29,27 @@
 
  /*TOP BAR CSS*/
 
- body {
+ body1 {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
  }
 
- .topnav {
+ .topnav1 {
    overflow: hidden;
    background-color: #333;
    
  }
+
+ /*    .topnav3     */
+ /* FOR BLOGGER IFRAME HEADER */
+
  .topnav3 {
    overflow: hidden;
    background-color: #333;
    border-radius: 15px 15px 0 0;
  }
 
- .topnav a {
+ .topnav1 a {
    float: left;
    color: #f2f2f2;
    text-align: center;
@@ -54,12 +58,12 @@
    font-size: 17px;
  }
 
- .topnav a:hover {
+ .topnav1 a:hover {
    background-color: #ddd;
    color: black;
  }
 
- .topnav a.active {
+ .topnav1 a.active {
    background-color: #197dd5;
    color: white;
    text-align: center;
