--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ float : right;
 
 /* GOOGLE DRIVE IFRAME [ 4 ] */
 
-.container4 {
+.container-4 {
   width: 90%;
   margin: 20px auto;
   border-radius: 15px;
@@ -152,7 +152,7 @@ float : right;
   background: #ffffff;
 }
 
-.iframe-wrapper4 {
+.iframe-wrapper-4 {
   position: relative;
   width: 100%;
   height: 400px;
@@ -162,7 +162,7 @@ float : right;
   box-sizing: border-box;
 }
 
-.iframe-controls4 {
+.iframe-controls-4 {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -172,7 +172,7 @@ float : right;
   border-radius: 5px;
 }
 
-iframe-4 {
+.iframe-4 {
   width: 100%;
   height: 100%;
   border: none;
@@ -180,7 +180,7 @@ iframe-4 {
   transition: transform 0.3s ease;
 }
 
-button-4 {
+.button-4 {
   margin: 0 5px;
   padding: 5px 10px;
   border: none;
@@ -190,10 +190,9 @@ button-4 {
   cursor: pointer;
 }
 
-button-4:hover {
+.button-4:hover {
   background: #0056b3;
 }
-
 
 
  /*BOTTOM BAR CSS*/
