--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,7 @@ float : right;
 
 /* GOOGLE DRIVE IFRAME [ 4 ] */
 
+
 .container-4 {
   width: 90%;
   margin: 20px auto;
@@ -153,6 +154,10 @@ float : right;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background: #ffffff;
   max-width: 850px;
+  transform: scale(1);
+  /* Constant zoom factor */
+  transform-origin: top left;
+  /* Scale from top-left corner */
 }
 
 
