--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
 
  body {
    margin: 0;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family: Helvetica;
  }
 
  .topnav {
@@ -208,7 +208,7 @@ float : right;
 body {
   background-color: #1a1a1a;
   /* color: #ffffff; */
-  font-family: Arial, sans-serif;
+  font-family: Helvetica;
 }
 
 .container-5 {
