--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
  }
 
 
+
  /* TOP BAR CSS [ 1 ] */
 
  body {
@@ -77,9 +78,9 @@ float : right;
   .top-bar2 {
    position: relative;
          width: 100%;
-         height: 250px;
-         background-color: #f0f0f0;
-         border-bottom: 1px solid #ddd;
+         height: 150px;
+         background-color: #1a1a1a;
+         border-bottom: 1px solid #000000;
          overflow: hidden;
          border-radius: 0 0 15px 15px;
          box-shadow: 0 4px 6px rgba(0,0,0,0.1);
@@ -88,7 +89,7 @@ float : right;
 
      .iframe-container2 {
          width: 100%;
-         height: 100%;
+         height: 200%;
          overflow: hidden;
          position: relative;
          
@@ -104,6 +105,32 @@ float : right;
          pointer-events: none;
          /* Prevents interaction with the iframe */
      }
+
+ /* SCROLL TEXT (MARQUEE IS OLD) */
+
+
+ .scroll-container {
+  height: 100px; /* Visible area */
+  overflow: hidden;
+  position: relative;
+}
+
+.scroll-text {
+
+  position: absolute;
+  white-space: normal;
+  animation: scroll-vertical 15s linear infinite;
+}
+
+
+@keyframes scroll-vertical {
+  from {
+    transform: translateY(10%);
+  }
+  to {
+    transform: translateY(-40%);
+  }
+}
 
 /*View More*/
      .view-more-link2 {
