--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,11 @@
 [ 6 ] = BOTTOM BAR
 */
 
-html {zoom: 110%;} /* sets default zoom level */
+html {
+  zoom: 110%;
+}
+
+/* sets default zoom level */
 
 
 
@@ -241,7 +245,7 @@ now Browse Curated Resources*/
   padding: 25px;
   margin: 20px auto;
   width: 79%;
-  max-width: 800px; 
+  max-width: 800px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -327,7 +331,7 @@ now Browse Curated Resources*/
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -360,7 +364,16 @@ now Browse Curated Resources*/
   align-items: center;
   justify-content: center;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+
+  width: 20px;
+  /* Fixed width */
+  height: 25px;
+  /* Fixed height */
+  line-height: 50px;
+  /* Centering the icon */
+  border-radius: 50%;
 }
+
 .back-icon:hover {
   background-color: #0056b3;
   transform: scale(1.1);
