--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 .top-bar-2 {
   position: relative;
   width: 100%;
-  height: 150px;
+  height: 250px;
   background-color: #1a1a1a;
   border-bottom: 1px solid #000000;
   overflow: hidden;
@@ -97,7 +97,7 @@ body {
   height: 200%;
   border: none;
   position: absolute;
-  top: -100px;
+  top: -125px;
   left: 0;
   pointer-events: none;
   /* Prevents interaction with the iframe */
@@ -105,11 +105,10 @@ body {
 
 /* SCROLL TEXT (MARQUEE IS OLD) */
 
-
 .scroll-container {
   height: 100px;
   /* Visible area */
-  overflow: hidden;
+  overflow: clip;
   position: relative;
 }
 
@@ -120,7 +119,6 @@ body {
   animation: scroll-vertical 20s linear infinite;
 }
 
-
 @keyframes scroll-vertical {
   from {
     transform: translateY(5%);
@@ -130,6 +128,7 @@ body {
     transform: translateY(-40%);
   }
 }
+
 
 /*View More*/
 
@@ -180,15 +179,17 @@ body {
 .container-4 {
   width: 89%;
   margin: 20px auto;
+  /* position:relative; */
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background: #ffffff;
-  max-width: 850px;
-  transform: scale(1);
+  max-width: 900px;
+  transform: scale(1.1);
   /* Constant zoom factor */
   transform-origin: top left;
   /* Scale from top-left corner */
+  align-content: center;
 }
 
 
@@ -198,7 +199,7 @@ body {
   height: 500px;
   overflow: hidden;
   border-radius: 15px;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
