--- a/styles.css
+++ b/styles.css
@@ -420,10 +420,10 @@ now Browse Curated Resources*/
 
 .scroll-button {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  width: 40px;
-  /* Fixed width */
-  height: 40px;
-  /* Fixed height */
+  bottom: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   position: fixed;
   bottom: 60px;
@@ -459,6 +459,15 @@ now Browse Curated Resources*/
   transition: transform 0.3s;
 }
 
+.arrow-circle {
+  width: 24px;
+  height: 24px;
+  border: 2px solid white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .arrow-up {
   transform: rotate(-135deg);
 }
