added more links

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
 [ 6 ] = BOTTOM BAR
 */
 
+
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+
 html {
   zoom: 110%;
 }
@@ -15,7 +20,9 @@ html {
 /* sets default zoom level */
 
 
-
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /*Table CSS*/
 
@@ -34,6 +41,12 @@ td {
   background-color: #333;
   border-radius: 15px 15px 0 0;
 }
+
+
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+
 
 /* TOP BAR CSS [ 1 ] */
 /* Reset margin and font */
@@ -101,6 +114,10 @@ body {
   }
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+
 /*blog windows css [ 2 ]*/
 
 /* Hide scrollbars for Chrome, Safari and Opera */
@@ -163,6 +180,9 @@ body {
   }
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /*View More*/
 
@@ -205,7 +225,9 @@ body {
   z-index: -1;
 }
 
-
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /* GOOGLE DRIVE IFRAME [ 4 ] */
 
@@ -268,6 +290,10 @@ body {
 .button-4:hover-4 {
   background: #0056b3;
 }
+
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /* HIGHLIGHTS SECTION [ 5 ] 
 now Browse Curated Resources*/
@@ -350,7 +376,61 @@ now Browse Curated Resources*/
   }
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
+/* DROP DOWN BUTTON */
+
+.dropbtn {
+  
+ 
+  color: white;
+  font-size: 16px;
+  border: none;
+  background-color: #00000044;
+  border-radius: 8px;
+  padding: 12px;
+  transition: background-color 0.3s ease;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: right;
+  padding-right: 40%;
+  
+}
+
+.dropdown-content {
+  
+  display: none;
+  position: absolute;
+  background-color: #00000044;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  transition: color 0.3s ease;
+}
+
+.dropdown-content a {
+  background-color: #000000c5;
+  color: rgb(255, 255, 255);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  transition: background-color 0.3s ease;
+}
+
+.dropdown-content a:hover { background-color: #424242;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {color: rgba(255, 255, 255, 0.7);}
+
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /* HOME BUTTON */
 
@@ -383,6 +463,10 @@ now Browse Curated Resources*/
   height: 24px;
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+
 /* BACK BUTTON */
 
 .back-icon {
@@ -414,6 +498,9 @@ now Browse Curated Resources*/
   transform: scale(1.1);
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /* SCROLL UP OR DOWN BUTTON */
 
@@ -476,6 +563,9 @@ now Browse Curated Resources*/
   transform: rotate(45deg);
 }
 
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
+/* -----------------------------------------------------------------  */
 
 /*BOTTOM BAR CSS*/
 
@@ -512,3 +602,4 @@ now Browse Curated Resources*/
   padding: 16px;
   margin-bottom: 30px;
 }
+
