--- a/styles.css
+++ b/styles.css
@@ -452,13 +452,17 @@ now Browse Curated Resources*/
 .container-5 {
   background-color: #000000c5;
   border-radius: 15px;
-
   padding: 25px;
   margin: 20px auto;
   width: 79%;
   max-width: 800px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  /* justify-content: center;
+  display: flex; */
+  min-width: 300px;
 }
+
+
 
 .drive-link-5 {
   margin-bottom: 20px;
@@ -468,7 +472,6 @@ now Browse Curated Resources*/
   color: #a8a8c7;
   text-decoration: none;
   transition: color 0.3s ease;
-  
 }
 
 .drive-link-5 a:hover {
@@ -477,7 +480,11 @@ now Browse Curated Resources*/
 
 .highlights-5 {
   color: rgba(255, 255, 255, 0.7);
-  margin: 15px 0;
+  margin-bottom: 20px ;
+  margin-top: -5px;
+  /* text-align: center; */
+  /* justify-content: center;
+  display: flex; */
 }
 
 .resources-table-5 {
@@ -486,13 +493,37 @@ now Browse Curated Resources*/
   border-spacing: 10px;
   margin-top: 15px;
   min-width: 200px;
+  /* text-align: center; */
+  /* justify-content: center;
+  display: flex; */
 }
 
+
 .resources-table-5 td {
+  /* text-align: center; */
   background-color: #00000044;
   border-radius: 8px;
-  padding: 12px;
+  padding: 0; 
+  /* Remove padding from td */
+  /* padding: 12px; */
   transition: background-color 0.3s ease;
+ /* justify-content: center;
+  display: flex; */
+}
+
+/* FOR CLICKABLE BUTTON DIV */
+
+.resources-table-5 .cell-link {
+  text-align: center;
+  color: #ffffffba;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  padding: 8%; /* Move the padding to the anchor */
+  transition: color 0.3s ease;
+  width: 100%;
+  height: 100%;
+ 
 }
 
 .resources-table-5 td:hover {
@@ -500,6 +531,7 @@ now Browse Curated Resources*/
 }
 
 .resources-table-5 a {
+  text-align: center;
   color: #ffffffba;
   text-decoration: none;
   display: block;
