--- a/styles.css
+++ b/styles.css
@@ -493,28 +493,22 @@ now Browse Curated Resources*/
   border-spacing: 10px;
   margin-top: 15px;
   min-width: 200px;
-  /* text-align: center; */
-  /* justify-content: center;
-  display: flex; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
 .resources-table-5 td {
-  /* text-align: center; */
   background-color: #00000044;
   border-radius: 8px;
-  padding: 0; 
-  /* Remove padding from td */
-  /* padding: 12px; */
+  padding: 0; /* Remove padding from td */
   transition: background-color 0.3s ease;
- /* justify-content: center;
-  display: flex; */
+  text-align: center; /* Center the content */
 }
 
 /* FOR CLICKABLE BUTTON DIV */
 
 .resources-table-5 .cell-link {
-  text-align: center;
   color: #ffffffba;
   text-decoration: none;
   display: block;
@@ -522,8 +516,7 @@ now Browse Curated Resources*/
   padding: 8%; /* Move the padding to the anchor */
   transition: color 0.3s ease;
   width: 100%;
-  height: 100%;
- 
+  box-sizing: border-box; /* Include padding in width calculation */
 }
 
 .resources-table-5 td:hover {
@@ -557,6 +550,8 @@ now Browse Curated Resources*/
   .resources-table-5 td {
     margin: 5px 0;
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
