fixed value cse?

--- a/selector.css
+++ b/selector.css
@@ -82,7 +82,7 @@ label {
     outline: none;
 }
 
-#driveLink5 a:link,
+#driveLink a:link,
 #driveLink a:visited,
 #driveLink a:active,
 #driveLink a:focus {
