--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ html {
 a {
   text-decoration: none;
 }
+p{
+
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 /* sets default zoom level */
 
