--- a/selector.css
+++ b/selector.css
@@ -25,7 +25,7 @@ label {
 #resetButton {
     padding: 0.5rem 1rem;
     background-color: #f0f0f0;
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc48;
     cursor: pointer;
 }
 
@@ -55,7 +55,7 @@ select {
 
 select option[value="list-description"] {
     display: none;
-    color: #ffffff;
+    /* color: #ffffff; */
 }
 
 /* select option:not([value="list-description"]) {
