--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,7 @@ html {
 a {
   text-decoration: none;
 }
-p{
 
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
 /* sets default zoom level */
 
@@ -51,6 +48,7 @@ td {
   overflow: hidden;
   background-color: #333;
   border-radius: 15px 15px 0 0;
+  font-size: large;
 }
 
 
@@ -63,7 +61,8 @@ td {
 /* Reset margin and font */
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Navigation bar container */
@@ -80,6 +79,7 @@ body {
   /* Higher z-index for the navbar */
   overflow: visible !important;
   /* Critical: allows dropdowns to extend outside */
+  
 }
 
 /* Navigation links */
@@ -93,6 +93,7 @@ body {
   padding: 10px 15px;
   font-size: 17px;
   white-space: nowrap;
+  
 }
 
 /* Hover effect */
@@ -105,6 +106,8 @@ body {
 .topnav-1 a.active-1 {
   background-color: #197dd500;
   color: white;
+  font-size: large;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Small text within links */
@@ -148,10 +151,17 @@ body {
   background-color: #4caf4f00;
   color: white;
   padding: 10px 16px;
-  font-size: 14px;
+  font-size: 16px;
   border: none;
   cursor: pointer;
   /* border-radius: 4px; */
+  /* font-size: large; */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.dropbtn:hover {
+  background-color: #197dd5;
+  color: rgb(255, 255, 255);
 }
 
 /* The dropdown content (hidden by default) */
@@ -163,6 +173,7 @@ body {
   left: auto;
   /* Override default left alignment */
   background-color: #f9f9f9;
+  color: #000000;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -184,6 +195,7 @@ body {
 .dropdown-content a:hover,
 .dropdown-content a:active {
   background-color: #048eff;
+  color: #ffffff;
   z-index: 2;
 }
 
