--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,12 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* .topnav-1 a.active-1:hover {
+  background-color: #197dd5;
+  color: rgb(0, 0, 0);
+  z-index: 1000;
+} */
+
 /* Small text within links */
 .topnav-1 small {
   display: block;
@@ -118,7 +124,7 @@ body {
 }
 
 .topnav-1 a:hover {
-  background-color: #197dd5;
+  background-color: #2478ff;
   color: rgb(255, 255, 255);
 }
 
@@ -159,10 +165,10 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.dropbtn:hover {
+/* .dropbtn:hover {
   background-color: #197dd5;
   color: rgb(255, 255, 255);
-}
+} */
 
 /* The dropdown content (hidden by default) */
 .dropdown-content {
@@ -194,7 +200,7 @@ body {
 /* Change color on hover */
 .dropdown-content a:hover,
 .dropdown-content a:active {
-  background-color: #048eff;
+  background-color: #2478ff;
   color: #ffffff;
   z-index: 2;
 }
@@ -210,10 +216,9 @@ body {
 }
 
 /* Change the background color of the dropdown button when hovering */
-/* .dropdown:hover .dropbtn {
+.dropdown:hover .dropbtn {
   background-color: #2478ff;
-  
-} */
+}
 
 /* -----------------------------------------------------------------  */
 /* -----------------------------------------------------------------  */
